--- a/TODO
+++ b/TODO
@@ -1,20 +1,20 @@
 * Actions:
-  - Follow
-  - Unfollow
-  - Like
-  - Unlike
-  - Comment
-  - Uncomment
+  [X] Follow
+  [X] Unfollow
+  [ ] Like
+  [ ] Unlike
+  [ ] Comment
+  [ ] Uncomment
   - ...
 * Queries:
-  - User Info (followers/ing count, etc)
-  - Followers
-  - Following
-  - User Posts
-  - Feed Posts
-  - Explore Posts
-  - Post Info
-  - Post Likes
-  - Post Comments
+  [X] User Info (followers/ing count, etc)
+  [ ] Followers
+  [ ] Following
+  [ ] User Posts
+  [ ] Feed Posts
+  [ ] Explore Posts
+  [ ] Post Info
+  [ ] Post Likes
+  [ ] Post Comments
   - ...
 * Models
