--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
   - ...
 * Queries:
   [X] User Info (followers/ing count, etc)
-  [ ] Followers
+  [X] Followers
   [ ] Following
   [ ] User Posts
   [ ] Feed Posts
@@ -18,3 +18,6 @@
   [ ] Post Comments
   - ...
 * Models
+  [ ] User
+  [ ] Post
+  - ...
