Add following query

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@
 * Queries:
   [X] User Info (followers/ing count, etc)
   [X] Followers
-  [ ] Following
+  [X] Following
   [ ] User Posts
   [ ] Feed Posts
   [ ] Explore Posts
