Add posts query

--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@
   [X] User Info (followers/ing count, etc)
   [X] Followers
   [X] Following
-  [ ] User Posts
+  [X] User Posts
   [ ] Feed Posts
   [ ] Explore Posts
   [ ] Post Info
