--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
   [X] Unlike
   [ ] Comment
   [ ] Uncomment
+  [ ] Save
   - ...
 * Queries:
   [X] User Info (followers/ing count, etc)
@@ -16,6 +17,9 @@
   [ ] Post Info
   [ ] Post Likes
   [ ] Post Comments
+  [ ] Suggested Users
+  [ ] Saved Posts
+  [ ] Tag Posts
   - ...
 * Models
   [ ] User
