Add comment action

--- a/TODO
+++ b/TODO
@@ -15,8 +15,8 @@
   [ ] Feed Posts
   [ ] Explore Posts
   [ ] Post Info
-  [ ] Post Likes
-  [ ] Post Comments
+  [ ] Likes
+  [ ] Comments
   [ ] Suggested Users
   [ ] Saved Posts
   [ ] Tag Posts
