Add uncomment action

--- a/TODO
+++ b/TODO
@@ -3,8 +3,8 @@
   [X] Unfollow
   [X] Like
   [X] Unlike
-  [ ] Comment
-  [ ] Uncomment
+  [X] Comment
+  [X] Uncomment
   [ ] Save
   - ...
 * Queries:
