Add explore query

--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@
   [X] Following
   [X] User Posts
   [ ] Feed Posts
-  [ ] Explore Posts
+  [X] Explore Posts
   [ ] Post Info
   [ ] Likes
   [ ] Comments
