Add post_info query

--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@
   [X] Followers
   [X] Following
   [X] User Posts
-  [ ] Post Info
+  [X] Post Info
   [ ] Likes
   [ ] Comments
   [ ] Feed Posts
