Add likes query

--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@
   [X] Following
   [X] User Posts
   [X] Post Info
-  [ ] Likes
+  [X] Likes
   [ ] Comments
   [ ] Feed Posts
   [X] Explore Posts
