--- a/TODO
+++ b/TODO
@@ -28,6 +28,13 @@
 * Tests:
   - ...
 * Other:
-  - Unlogged use (queries)
-  - Demo gif
+  [ ] Algorithms (with session awareness)
+  [ ] Ask user/password if not defined
+  [ ] Create session if not exists
+  [ ] Retry login until success
+  [ ] Clear cookies + login again if session expired
+  [ ] Block until "now < last_request_timestamp + (action/query) delay"
+  [ ] Logs
+  [ ] Unlogged use (queries)
+  [ ] Demo gif (README.md)
   - ...
