Create session if not exists

--- a/TODO
+++ b/TODO
@@ -30,7 +30,7 @@
 * Other:
   [ ] Algorithms (with session awareness)
   [X] Ask user/password if not defined
-  [ ] Create session if not exists
+  [X] Create session if not exists
   [ ] Retry login until success
   [ ] Clear cookies + login again if session expired
   [ ] Block until "now < last_request_timestamp + (action/query) delay"
