--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@
   [X] Post Info
   [X] Likes
   [X] Comments
-  [ ] Feed Posts (https://www.instagram.com/?__a=1)
+  [X] Feed Posts (https://www.instagram.com/?__a=1)
   [ ] Activity (https://www.instagram.com/accounts/activity/?__a=1)
   [X] Explore Posts
   [ ] Suggested Users (https://www.instagram.com/explore/people/ | e3c04bbb35d86a16cf0e7881c5057737)
